# fty-alert-flexible

./: .gitignore  CMakeLists.txt  Jenkinsfile  LICENSE  Makefile.am  README.md  ci_build.sh  ci_dependencies.sh  ci_deploy.sh  configure.ac  install.xml  project.xml
agent/: CMakeLists.txt
agent/src/: fty-alert-flexible.cc
doc/: .gitignore  Makefile.am
include/: Makefile.am  fty_alert_flexible_audit_log.h  fty_alert_flexible_library.h
lib/: CMakeLists.txt
lib/include/: fty_alert_flexible_library.h
lib/src/: asset_info.cc  asset_info.h  audit_log.cc  audit_log.h  flexible_alert.cc  flexible_alert.h  fty_alert_flexible_audit_log.cc  fty_alert_flexible_audit_log.h  fty_alert_flexible_classes.h  rule.cc  rule.h  vsjson.cc  vsjson.h
lib/tests/: flexible_alert.cpp  main.cc  rule.cpp
lib/tests/selftest-ro/: logging-test.cfg
lib/tests/selftest-ro/rules/: load.rule  status.ups@ups-1234.rule
packaging/debian/: changelog  control  copyright  fty-alert-flexible.dsc.obs
packaging/redhat/: fty-alert-flexible.spec
resources/: fty-alert-flexible-log.cfg.in  fty-alert-flexible.cfg.in  fty-alert-flexible.conf  fty-alert-flexible.service.in
src/: Makemodule.am  alertsflexiblelog.cfg  flexible_alert.c  flexible_alert.cc  fty-alert-flexible-log.cfg  fty-alert-flexible.cc  fty-alert-flexible.cfg.in  fty-alert-flexible.conf  fty_alert_flexible.c  fty_alert_flexible_audit_log.cc  fty_alert_flexible_classes.h  rule.c
zproject-hold/: fty-alert-flexible.conf  project.xml
